# rfid_node

./: .gitignore  README.md  config_loader.py  package.xml  rfid.py  rfid_spb_node.py  setup.cfg  setup.py
config/: rfid_params.yaml  rfid_secrets.example.yaml
firmware/: rfid_m5stack.py
firmware/rfid_m5stack/: platformio.ini  rfid_m5stack.ino
firmware/rfid_m5stack/install/: local_setup.sh  setup.sh
firmware/rfid_m5stack/log/: latest_build
launch/: rfid.launch.py
rfid_node/: config_loader.py  rfid.py  rfid_bridge_node.py  rfid_driver_node.py
scripts/: install_service.sh
systemd/: rfid_node.service
